--- a/ecs_simple_web_app/requirements.txt
+++ b/ecs_simple_web_app/requirements.txt
@@ -1,71 +1,41 @@
-apturl==0.5.2
-beautifulsoup4==4.4.1
-blinker==1.3
-Brlapi==0.6.4
-chardet==2.3.0
-checkbox-support==0.22
-chrome-gnome-shell==0.0.0
-command-not-found==0.3
-cryptography==1.2.3
-defer==1.0.6
-fail2ban==0.9.3
-feedparser==5.1.3
-guacamole==0.9.2
-html5lib==0.999
-httplib2==0.9.1
-idna==2.0
-Jinja2==2.8
-language-selector==0.1
-louis==2.6.4
-lxml==3.5.0
-Mako==1.0.3
-MarkupSafe==0.23
-mate-tweak==3.5.10
-oauthlib==1.0.3
-onboard==1.2.0
-padme==1.1.1
-pexpect==4.0.1
-Pillow==3.1.2
-plainbox==0.25
-polib==1.0.7
-psutil==3.4.2
-ptyprocess==0.5
-pyasn1==0.1.9
-pycups==1.9.73
-pycurl==7.43.0
-pygobject==3.20.0
-pyinotify==0.9.6
-PyJWT==1.3.0
-pyparsing==2.0.3
-python-apt==1.1.0b1+ubuntu0.16.4.4
-python-debian==0.1.27
-python-systemd==231
-pyxdg==0.25
-reportlab==3.3.0
-requests==2.9.1
-screen-resolution-extra==0.0.0
-sessioninstaller==0.0.0
-six==1.10.0
-ssh-import-id==5.5
-system-service==0.3
-ubuntu-drivers-common==0.0.0
-ufw==0.35
-unattended-upgrades==0.1
-unity-scope-calculator==0.1
-unity-scope-chromiumbookmarks==0.1
-unity-scope-colourlovers==0.1
-unity-scope-devhelp==0.1
-unity-scope-firefoxbookmarks==0.1
-unity-scope-gdrive==0.7
-unity-scope-manpages==0.1
-unity-scope-openclipart==0.1
-unity-scope-texdoc==0.1
-unity-scope-tomboy==0.1
-unity-scope-virtualbox==0.1
-unity-scope-yelp==0.1
-unity-scope-zotero==0.1
-urllib3==1.13.1
-usb-creator==0.3.0
-xdiagnose==3.8.4.1
-xkit==0.0.0
-XlsxWriter==0.7.3
+attrs==19.1.0
+aws-cdk.assets==1.7.0
+aws-cdk.aws-apigateway==1.7.0
+aws-cdk.aws-applicationautoscaling==1.7.0
+aws-cdk.aws-autoscaling==1.7.0
+aws-cdk.aws-autoscaling-common==1.7.0
+aws-cdk.aws-autoscaling-hooktargets==1.7.0
+aws-cdk.aws-certificatemanager==1.7.0
+aws-cdk.aws-cloudformation==1.7.0
+aws-cdk.aws-cloudfront==1.7.0
+aws-cdk.aws-cloudwatch==1.7.0
+aws-cdk.aws-ec2==1.7.0
+aws-cdk.aws-ecr==1.7.0
+aws-cdk.aws-ecr-assets==1.7.0
+aws-cdk.aws-ecs==1.7.0
+aws-cdk.aws-elasticloadbalancing==1.7.0
+aws-cdk.aws-elasticloadbalancingv2==1.7.0
+aws-cdk.aws-events==1.7.0
+aws-cdk.aws-iam==1.7.0
+aws-cdk.aws-kms==1.7.0
+aws-cdk.aws-lambda==1.7.0
+aws-cdk.aws-logs==1.7.0
+aws-cdk.aws-route53==1.7.0
+aws-cdk.aws-route53-targets==1.7.0
+aws-cdk.aws-s3==1.7.0
+aws-cdk.aws-s3-assets==1.7.0
+aws-cdk.aws-secretsmanager==1.7.0
+aws-cdk.aws-servicediscovery==1.7.0
+aws-cdk.aws-sns==1.7.0
+aws-cdk.aws-sns-subscriptions==1.7.0
+aws-cdk.aws-sqs==1.7.0
+aws-cdk.aws-ssm==1.7.0
+aws-cdk.core==1.7.0
+aws-cdk.cx-api==1.7.0
+aws-cdk.region-info==1.7.0
+cattrs==0.9.0
+jsii==0.16.0
+publication==0.0.3
+python-dateutil==2.8.0
+six==1.12.0
+typing-extensions==3.7.4
