--- a/apigateway_cognito/requirements.txt
+++ b/apigateway_cognito/requirements.txt
@@ -6,6 +6,7 @@ aws-cdk.aws-autoscaling-common==1.15.0
 aws-cdk.aws-certificatemanager==1.15.0
 aws-cdk.aws-cloudformation==1.15.0
 aws-cdk.aws-cloudwatch==1.15.0
+aws-cdk.aws-cognito==1.15.0
 aws-cdk.aws-dynamodb==1.15.0
 aws-cdk.aws-ec2==1.15.0
 aws-cdk.aws-elasticloadbalancingv2==1.15.0
